--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .App {
+  font-family: 'Open Sans', sans-serif;
   text-align: center;
+}
+
+/* To do component */
+.div-todo {
+  margin: 3em auto 0 auto;
+  text-align: left;
+  width: 70%;
+}
+.div-todo form {
+  border: 1px solid #eee;
+  border-radius: 6px;
+  padding: 1em;
+  width: 50%;
+  margin: 1em;
+}
+.div-todo form input {
+  border: 1px solid #eee;
+  border-radius: 6px;
+  padding: 1em;
+  margin-bottom: 1em;
+  width: 95%;
+}
+.div-todo form input::placeholder {
+  color: #eee;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 1px #bbb;
+}
+.div-todo form button {
+  background-color: lightcoral;
+  border: none;
+  border-radius: 6px;
+  color: #fff;
+  letter-spacing: 3px;
+  padding: .8em 2em;
+  text-transform: uppercase;
+  transition: .6s;
+  outline: none;
+}
+.div-todo form button:hover {
+  background-color: coral;
+  cursor: pointer;
+  transition: .6s;
+}
+.div-map {
+  padding-left: 1em;
+}
+.div-map li {
+  border-bottom: 1px solid #eee;
+  color: rgb(255, 102, 0);
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 1px #000;
 }
